Chess Club/src/objects/Supervisor__c.object
<CustomObject>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Person__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organiser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Supervisors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supervisor Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>Organizer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Supervisor#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supervisor Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Organiser_Not_Contactable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Organizer__c ,  Person__r.Contact_Details__c = 0 )</errorConditionFormula>
        <errorMessage>Contact details are required for organisers</errorMessage>
    </validationRules>
</CustomObject>